--- a/hugo.toml
+++ b/hugo.toml
@@ -1,53 +1,12 @@
 baseURL = "/"
-title = "bidman.io"
+title = "顧客提案をエンジニアリングするブログ"
 author = "bidman"
 languageCode = "ja"
 DefaultContentLanguage = "ja"
 enableInlineShortcodes = true
-theme = "tella"
+theme = "ananke"
+
+SectionPagesMenu = "main"
+Paginate = 10
+googleAnalytics = ""
 enableRobotsTXT = true
-
-# Please enable this feature if the site is available in Japanese, Chinese or Korean.
-hasCJKLanguage = true
-
-# If you're using Google Analytics, you can enable this feature.
-googleAnalytics = "G-Z86TMHBJ7R"
-
-# Disqus Comment System
-#disqusShortname = ""
-
-[params]
-
-  showBlog = true
-  mainSections = ['blog']
-
-  googleFonts = true
-
-  [params.logo]
-    main = "img/logo/logo.svg"
-    alt = "Logo"
-
-    # The size parameter is the class name of tailwindcss
-    # https://tailwindcss.com/
-    size = "h-14"
-
-  [params.site]
-    name = "顧客提案をエンジニアリングするブログ"
-
-  [params.icon]
-    #If you want to use FontAwesome, set this parameter to true.
-    fontawesome = true
-
-[menu]
-
-  [[menu.main]]
-    identifier = "blog"
-    name = "Blog"
-    url = "/blog/"
-    weight = 2
-
-  # Footer Menu
-  [[menu.footer]]
-    name = "Home"
-    url = "/"
-      weight = 1
